<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="0dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#EB0D0D1D"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="120dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:layout_marginBottom="4dp"
            tools:src="@color/colorPrimaryDark"
            android:contentDescription="@string/poster" />

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="#FFE57F"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:maxLines="2"
            android:textSize="19sp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_item_dateReleased"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2018"
            android:textColor="#979797"
            android:layout_marginTop="20dp"
            android:layout_marginStart="140dp"
            android:layout_below="@id/tv_item_title"/>

        <ImageView
            android:id="@+id/iv_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="105dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_stars" />

        <TextView
            android:id="@+id/tv_item_userScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="105dp"
            android:layout_toEndOf="@+id/iv_star"
            android:text="@string/_8_3"
            android:textColor="#979797"
            android:textSize="15sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/iv_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="155dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_people"
            android:layout_below="@id/iv_star"/>

        <TextView
            android:id="@+id/tv_item_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="155dp"
            android:layout_toEndOf="@+id/iv_people"
            android:text="@string/vote"
            android:textColor="#979797"
            android:textSize="15sp"
            android:textStyle="italic"
            android:layout_below="@id/tv_item_userScore"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>